kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-deployment
  labels:
    app: flights-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flights-microservice
  template:
    metadata:
      labels:
        app: flights-microservice
    spec:
      containers:
      - name: flights-microservice
        image: docker.io/austinbaugh/utopia-flights-microservice:0.0.3-SNAPSHOT
        ports:
          - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings-deployment
  labels:
    app: bookings-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookings-microservice
  template:
    metadata:
      labels:
        app: bookings-microservice
    spec:
      containers:
      - name: bookings-microservice
        image: docker.io/austinbaugh/utopia-bookings-microservice:0.0.3-SNAPSHOT
        ports:
          - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: users-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-microservice
  template:
    metadata:
      labels:
        app: users-microservice
    spec:
      containers:
      - name: users-microservice
        image: docker.io/austinbaugh/utopia-users-microservice:0.0.3-SNAPSHOT
        ports:
          - containerPort: 8080
