kubernetes/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: db
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      name: mysql

---
apiVersion: v1
kind: Service
metadata: 
  name: users-spring-api
  labels:
    app: users-spring-api
spec:
  selector:
    app: users-spring-api
  ports:
    - protocol: TCP
      port: 8080
      name: http

---

apiVersion: v1
kind: Service
metadata: 
  name: flights-spring-api
  labels:
    app: flights-spring-api
spec:
  selector:
    app: flights-spring-api
  ports:
    - protocol: TCP
      port: 8080
      name: http

---

apiVersion: v1
kind: Service
metadata: 
  name: bookings-spring-api
  labels:
    app: bookings-spring-api
spec:
  selector:
    app: bookings-spring-api
  ports:
    - protocol: TCP
      port: 8080
      name: http

---

apiVersion: v1
kind: Service
metadata: 
  name: data-producer
  labels:
    app: data-producer
spec:
  type: NodePort
  selector:
    app: data-producer
  ports:
    - protocol: TCP
      port: 5000
      name: http
